# TraceZero

./: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json  txtx.yml
app/: package.json  tailwind.config.js  tsconfig.json  vite.config.ts
app/public/circuits/: withdrawal.wasm  withdrawal_final.zkey  withdrawal_vk.json
app/src/: routeTree.gen.ts
app/src/components/: CreditPurchase.tsx  DepositForm.tsx  ProofGenerator.tsx  SolanaProvider.tsx  WalletConnect.tsx  WithdrawForm.tsx  index.ts
app/src/hooks/: index.ts  useBlindSignature.ts  useClaim.ts  useCredits.ts  useDeposit.ts  useProof.ts  useWithdraw.ts
app/src/lib/: constants.ts
app/src/lib/api/: relayer.ts
app/src/lib/blind/: index.ts
app/src/lib/crypto/: encryption.ts  index.ts  poseidon.ts  secureStorage.ts
app/src/lib/stealth/: index.ts
app/src/lib/zk/: index.ts  prover.ts  witness.ts
app/src/routes/: __root.tsx  claim.tsx  credits.tsx  deposit.tsx  index.tsx  withdraw.tsx
app/src/styles/: globals.css
app/src/types/: circomlibjs.d.ts  snarkjs.d.ts
circuits/: .gitignore  README.md  merkle_tree.circom  ownership.circom  package.json  poseidon.circom  withdrawal.circom
circuits/scripts/: compile.sh  compute_zeros.js  export_vk.sh  generate_vk_rust.js  recompile_ownership.sh  setup.sh  test_circuit.js
crates/network/: Cargo.toml  Dockerfile  torrc
crates/network/src/: config.rs  error.rs  http_client.rs  lib.rs  socks_client.rs
crates/network/tests/: packet_sniff_test.rs
crates/privacy-proxy-sdk/: Cargo.toml
crates/privacy-proxy-sdk/src/: blind_sig.rs  client.rs  credits.rs  crypto.rs  deposit.rs  error.rs  lib.rs  merkle.rs  stealth.rs  withdrawal.rs
crates/relayer/: Cargo.toml
crates/relayer/src/: blind_signer.rs  config.rs  deposit.rs  encryption.rs  error.rs  main.rs  merkle_service.rs  server.rs  withdrawal.rs
crates/tor-gateway/: Dockerfile  package.json
crates/tor-gateway/src/: packet-analysis.test.ts  server.ts
crates/tracer/: Cargo.toml
crates/tracer/src/: main.rs
crates/tracezero/: Cargo.toml  docker-compose.yml  torrc
crates/tracezero/src/: config.rs  http_client.rs  lib.rs  socks_client.rs
docs/: decisions.md  math.md
programs/privacy_proxy/: Anchor.toml
programs/privacy_proxy/programs/privacy_proxy/: Cargo.toml
programs/privacy_proxy/programs/privacy_proxy/src/: constants.rs  errors.rs  lib.rs
programs/privacy_proxy/programs/privacy_proxy/src/instructions/: cancel_withdrawal.rs  deposit.rs  execute_withdrawal.rs  init_pool.rs  initialize.rs  mod.rs  purchase_credits.rs  request_withdrawal.rs  update_config.rs
programs/privacy_proxy/programs/privacy_proxy/src/state/: deposit_pool.rs  encrypted_note.rs  global_config.rs  historical_roots.rs  mod.rs  nullifier.rs  pending_withdrawal.rs  used_token.rs
programs/privacy_proxy/programs/zk_verifier/: Cargo.toml
programs/privacy_proxy/programs/zk_verifier/src/: groth16.rs  lib.rs  poseidon.rs  verifying_key.rs
programs/privacy_proxy/scripts/: fix-idl.sh  init-program.ts  update-treasury.ts
programs/privacy_proxy/tests/: privacy_proxy.ts
runbooks/: README.md
runbooks/deployment/: main.tx
runbooks/start/: main.tx  signers.localnet.tx
scripts/: start-tracezero.sh
