[package]
name = "tracezero"
version = "0.1.0"
edition = "2021"
description = ""

[features]
default = []
test-utils = []

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "socks"] }
tokio-socks = "0.5"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
