[package]
name = "privacy-proxy-sdk"
version = "0.1.0"
edition = "2021"
description = "Client SDK for privacy-proxy protocol - blinded credits, deposits, withdrawals"

[dependencies]
solana-sdk = "2.0"
tracezero = { path = "../network" }
rsa = { version = "0.9", features = ["sha2"] }
sha2 = "0.10"
rand = "0.8"
light-poseidon = "0.1"
ark-bn254 = "0.4"
ark-ff = "0.4"
aes-gcm = "0.10"  # Authenticated encryption
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-big-array = "0.5"
serde_bytes = "0.11"
bs58 = "0.5"
hex = "0.4"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
