[package]
name = "test-privacy"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "2.0"
solana-sdk = "2.0"
solana-transaction-status = "2.0"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
colored = "2.1"
chrono = "0.4"
